# omni_drive_controller

./: README.md
omni_drive_controller/: CMakeLists.txt  omni_drive_controller.xml  package.xml
omni_drive_controller/include/omni_drive_controller/: kinematics.hpp  omni_drive_controller.hpp  types.hpp
omni_drive_controller/src/: kinematics.cpp  omni_drive_controller.cpp
omni_drive_controller/test/: test_kinematics.cpp
